Fix the bug that causes KMail to loose receiving accounts when KMail is exiting and wants to open the wallet, but is killed during that time (happens during logout).

Now, the account config groups are saved after writing out the existing
accounts, so this can't happen anymore.

I also removed the feature to disable accounts, it was only a
hidden feature and caused trouble with this.

BUG: 169166

svn path=/trunk/KDE/kdepim/; revision=913992